# librarian

./: .gitignore  README.md  pyproject.toml  todo.md
librarian/: components.py  constants.py  cpaths.py  device.py  document_ingestion.py  embedding.py  envvars.py  librarian.py  librarian_config.py  text_processing.py  todo.md
librarian/cli/: librarian_cli.py
librarian/core/: librarian.py
librarian/dao/: base_dao.py  library_file_dao.py
librarian/dao/schema/: dao_schema.py
librarian/db/: qdrant.py
librarian/setup/: setup_pandoc.py
librarian_mcp/: hello_world.py  librarian.py  weather.py
librarian_playground/: pg_librarian_251008.py
